added all trading cards

--- a/templates/cards.html
+++ b/templates/cards.html
@@ -17,6 +17,21 @@
 
   <!-- Mount Llambda's card on to this element. -->
   <div id="llambda"></div>
+
+  <!-- Mount Merge's card on to this element. -->
+  <div id="merge"></div>
+
+  <!-- Mount Off-by-one's card on to this element. -->
+  <div id ="off-by-one"></div>
+
+  <!-- Mount Polymorphism's card on to this element. -->
+  <div id ="polymorphism"></div>
+
+  <!-- Mount Seedpy's card on to this element. -->
+  <div id ="seedpy"></div>
+
+  <!-- Mount Shortstack-overflow's card on to this element. -->
+  <div id ="shortstack-overflow"></div>
 </div>
 
 {% endblock %}
